# SnakeGame

./: CMakeLists.txt  README.md
include/: snake.h
source/: main.c  snake.c
source/main.dSYM/Contents/Resources/DWARF/: main
